# FindIt_pi

./: CMakeLists.txt  README.md  VERSION.cmake  appveyor.yml
.circleci/: config.yml  config.yml.bak
OLD/: CMakeLists.txt.bak
buildosx/InstallOSX/: findit_pi.pkgproj.in
cmake/: PluginInstall.cmake
include/: findit.h  findit_pi.h  findit_pi.h.bak  gui.h  icons.h  new-gui.h  old-gui.h
manual/: antora.yml  antora.yml.bak  site.yml
manual/find-it/: site.yml
manual/modules/ROOT/pages/: find-it.adoc  index.adoc
po/: POTFILES.in  aa_ER.po  ar_SA.po  bg_BG.po  ca.po  ca_ES.po  cs.po  cs_CZ.po  da.po  da_DK.po  de.po  de_DE.po  el.po  el_GR.po  en_GB.po  es.po  es_EM.po  es_ES.po  et.po  et_EE.po  fi.po  fi_FI.po  fil_PH.po  findit_pi.pot  fr.po  fr_FR.po  gl.po  gl_ES.po  he_IL.po  hi_IN.po  hu.po  hu_HU.po  id_ID.po  is_IS.po  it.po  it_IT.po  ja.po  ja_JP.po  ko_KR.po  mr_IN.po  (+22 more)
src/: findit.cpp  findit.h  findit_pi - Copy.cpp  findit_pi-original.cpp  findit_pi.cpp  findit_pi.cpp.bak  findit_pi.h  gui.cpp  gui.fbp  gui.h  icons.cpp  icons.h  new-gui.cpp  old-gui.cpp  old-gui.fbp
src/OLD/: jsonval.cpp
